--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <!-- POO Csharp -->
-    
-</body>
-</html>
+C # 
+
+
+C# es un lenguaje de programación orientado a objetos. Los cuatro principios básicos de la programación orientada a objetos son:
+
+// Abstracción: modelar los atributos e interacciones pertinentes de las entidades como clases para definir una representación abstracta de un sistema.
+
+// Encapsulación: ocultar el estado interno y la funcionalidad de un objeto y permitir solo el acceso a través de un conjunto público de funciones.
+
+// Herencia: capacidad de crear nuevas abstracciones basadas en abstracciones existentes.
+
+// Polimorfismo: capacidad de implementar propiedad o métodos heredados de maneras diferentes en varias abstracciones.
+
+
+
+
